--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <!-- Bootstrap JavaScript -->
-    <script src="main/bootstrap.min.js" async></script>
+    <script src="./main/bootstrap.min.js" async></script>
 </head>
 
-<body>
+<body class="p-color">
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
         <div class="container-fluid">
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item px-3">
                         <a class="nav-link" href="#">Pangad</a>
@@ -46,11 +46,11 @@
         </div>
     </nav>
     <!-- Lehekülje kirjeldus -->
-    <section class="main-bg">
+    <section class="main-bg d-flex justify-content-center align-items-top">
         <div class="container-fluid">
-            <div class="text-white text-center p-4">
+            <div class="overlay-text text-center">
                 <h1>Investeerimise võimalused Eesti pankades</h1>
-                <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repellendus aut.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repellendus aut.
                     Voluptatum nisi
                     fugit accusantium nesciunt eligendi molestiae cupiditate beatae nulla aliquam ea consectetur
                     doloremque magnam repudiandae, numquam quo libero?</p>
@@ -62,9 +62,9 @@
     <section>
         <div>
             <!-- <h1 class="text-center bg-white text-black">Taust</h1> -->
-            <div class="row d-flex justify-content-evenly">
+            <div class="row d-flex justify-content-evenly mb-3">
                 <div class="card" style="width:400px">
-                    <img class="card-img-top p-2 " src="./img/Swedbank_Logo.jpg" alt="Card image">
+                    <img class="card-img-top p-2 " src="./img/Swed-Logo.jpg" alt="Card image">
 
                     <div class="card-body">
 
@@ -80,7 +80,7 @@
                 </div>
                 <div class="card" style="width:400px">
 
-                    <img class="card-img-top card-logo-size p-2" src="./img/SEB(edit).png" alt="Card image">
+                    <img class="card-img-top card-logo-size p-2" src="./img/seb-logo-3.png" alt="Card image">
                     <div class="card-body">
 
                         <p class="card-text">SEB Pank on Eesti suuruselt teine pank, mille omanik on Rootsi pank
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="card" style="width:400px">
-                    <img class="card-img-top card-logo-size p-2" src="./img/LHV_Logo(edit).png" alt="Card image">
+                    <img class="card-img-top card-logo-size p-2" src="./img/LHV-logo.png" alt="Card image">
                     <div class="card-body">
 
                         <p class="card-text">LHV asutasid 1999. aastal Rain Lõhmus ja Andres Viisemann. Meil töötab
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="card" style="width:400px">
-                    <img class="card-img-top p-2" src="./img/coop-pank_Logo.jpg" alt="Card image">
+                    <img class="card-img-top p-2" src="./img/coop-pank-color-1.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">John Doe</h4>
                         <p class="card-text">Coop Pank on Eesti kapitalil põhinev pank. Panga ametlik nimi on Coop Pank
@@ -121,85 +121,186 @@
         </div>
     </section>
     <!-- Võimalused -->
-    <section>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button d-block text-center" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Accordion Item #1
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+    <section class="s-color">
+        <div class="p-3">
+            <div class="text-center p-3">
+                <h3 class="text-white">Võimaluste ülevaade</h3>
+            </div>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                            aria-controls="collapseOne">
+                            SWEDBANK
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Options: Offers various investment funds, pension funds, bonds, and a trading platform for
+                            stocks and ETFs.
+                            Pros: User-friendly online platform, good range of investment funds, and personalized
+                            financial advice available.
+                            Cons: Relatively high fees for smaller investments; trading fees on stocks and ETFs can add
+                            up.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed d-block text-center" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                        aria-controls="collapseTwo">
-                        Accordion Item #2
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                            aria-controls="collapseTwo">
+                            SEB
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Options: Provides mutual funds, pension funds, bonds, and a platform for trading stocks and
+                            ETFs.
+                            Pros: Extensive options for low-to-medium risk investments, solid educational resources, and
+                            a simple platform.
+                            Cons: Limited international trading options, higher fees for active trading.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed d-block text-center" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                        aria-controls="collapseThree">
-                        Accordion Item #3
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                            aria-controls="collapseThree">
+                            LHV
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Options: Known for wide-ranging investment opportunities, including stocks, bonds, funds,
+                            and unique products like crypto exposure.
+                            Pros: Popular among active investors, competitive fees, a large selection of foreign stocks,
+                            and solid support for tech-savvy users.
+                            Cons: Platform may feel complex for beginners, and there are fees on some account types for
+                            inactive users.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed d-block text-center" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
-                        aria-controls="collapseFour">
-                        Accordion Item #4
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                            aria-controls="collapseFour">
+                            COOP Pank
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Options: Primarily offers funds and pension plans, along with some investment account
+                            services.
+                            Pros: Good choice for beginners, offers simpler, low-risk funds, and focuses on stable
+                            returns.
+                            Cons: Limited variety of investment products compared to other banks, and a less advanced
+                            trading platform.
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section>
+        <div class="container-lg">
+            <div class="text-center p-3">
+                <h3 class="text-white">Tabel</h3>
+            </div>
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">SwedBank</th>
+                        <th scope="col">SEB</th>
+                        <th scope="col">LHV</th>
+                        <th scope="col">COOP</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Aksiad</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Pension</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Fondid</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Kasutaja sõbralikkus</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Tasud</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Mille poolest erineb</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Kliendi tugi</th>
+                        <td>Võimalused</td>
+                        <td>Swedbank</td>
+                        <td>SEB</td>
+                        <td>LHV</td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <section class="s-color">
+        <div class="d-flex justify-content-around">
+            <div class="message col-1 text-white">
+                <h3>Sõnum</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione corrupti iure maxime error commodi
+                    deleniti beatae laudantium exercitationem quod, soluta architecto ad, qui labore voluptas modi vitae
+                    id magnam accusantium?</p>
+            </div>
+            <div class="contact col-2 text-white">
+                <h3>Kontaktid</h3>
+                <div class="row">
+                    <a>Swed</a>
+                    <a>SEB</a>
+                    <a>LHV</a>
+                    <a>COOP</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="text-white p-3 d-flex">Copyright 2024</footer>
 
 
 </body>
