--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@
         </div>
     </nav>
     <!-- Lehekülje kirjeldus -->
-    <section class="main-bg d-flex justify-content-center align-items-top fade-in-section" id="home">
+    <section class="main-bg  fade-in-section" id="home">
         <div class="container-fluid">
-            <div class="overlay-text text-center">
-                <h1>Investeerimise võimalused Eesti pankades</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repellendus aut.
-                    Voluptatum nisi
-                    fugit accusantium nesciunt eligendi molestiae cupiditate beatae nulla aliquam ea consectetur
-                    doloremque magnam repudiandae, numquam quo libero?</p>
+            <div class="overlay-text">
+                <h1 class="main-title">InvEST<br> Estonia</h1>
+                <p class="secondary-text">Pave your to freedom!</p>
             </div>
         </div>
     </section>
@@ -135,7 +132,7 @@
         </div>
     </section>
     <!-- Võimalused -->
-    <section class="s-color fade-in-section" id="features">
+    <section class="s-color fade-in-section p-5" id="features">
         <div class="text-center p-3">
             <h1 class="text-white">Võimaluste ülevaade</h1>
         </div>
@@ -220,7 +217,7 @@
             </div>
         </div>
     </section>
-    <section class="fade-in-section">
+    <section class="fade-in-section p-5">
         <div class="text-center p-3">
             <h1 class="text-white">Tabel</h1>
         </div>
@@ -306,15 +303,15 @@
 
         </div>
     </section>
-    <section class="s-color fade-in-section">
-        <div class="d-flex justify-content-around">
+    <section class="s-color fade-in-section p-5">
+        <div class="d-flex justify-content-around ">
             <div class="message col-1 text-white">
                 <h3>Sõnum</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione corrupti iure maxime error commodi
                     deleniti beatae laudantium exercitationem quod, soluta architecto ad, qui labore voluptas modi vitae
                     id magnam accusantium?</p>
             </div>
-            <div class="contact col-2 text-white" id="contact">
+            <div class="contact col-2 text-white " id="contact">
                 <h3>Kontaktid</h3>
                 <div class="row">
                     <a>Swed</a>
@@ -325,6 +322,7 @@
             </div>
         </div>
     </section>
+   
     <footer class="text-white p-3 d-flex">Copyright 2024</footer>
 
 
