beta 1.1 added animation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 </head>
 
 <body class="p-color">
-
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top py-4">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top py-4 p-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"
@@ -60,17 +59,19 @@
         <div class="container-fluid">
             <div class="overlay-text">
                 <h1 class="main-title">InvEST<br> Estonia</h1>
-                <p class="secondary-text">Pave your to freedom!</p>
+                <p class="secondary-text">Pave your road to freedom!</p>
             </div>
         </div>
     </section>
     <!-- Pangad ja institutsioonid -->
-    <section class="fade-in-section" id="bank">
+    <section class="fade-in-section p-5" id="bank">
+        <div class="stripe">
+            <div class="fill"></div>
+        </div>
         <div class="text-center p-3">
             <h1 class="text-center p-color text-white">Natukene ajalugu</h1>
         </div>
         <div>
-
             <div class="row d-flex justify-content-evenly mx-auto">
                 <div class="card" style="max-width: 375px">
                     <div class="border border-black card-logo">
@@ -84,7 +85,7 @@
                             Meie eesmärk on aidata kaasa sellele, et inimeste ja ettevõtete rahaasjad oleksid
                             pikaajaliselt korras. Järgime kõigis oma tegevustes kolme väärtust: oleme avatud, lihtsad ja
                             hoolivad.</p>
-                        <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+
                     </div>
                 </div>
                 <div class="card" style="max-width: 375px">
@@ -98,7 +99,7 @@
                             SEB on Eesti turule keskendunud universaalpank, mis pakub täisfinantsteenuseid suurtele,
                             väikestele ja keskmise suurusega ettevõtetele, avalikule sektorile ja eraisikutele. 2023.
                             aasta lõpu seisuga oli SEB Eesti Ühispangal üle 750 000 era- ja ärikliendi. </p>
-                        <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+
                     </div>
                 </div>
                 <div class="card" style="max-width: 375px">
@@ -111,7 +112,7 @@
                             pangateenuseid kasutab üle 400 000 kliendi, LHV hallatavatel pensionifondidel on 129 000
                             aktiivset klienti ja LHV Kindlustusega on kaitstud 160 000 klienti. Oleme uuendusmeelsed
                             ning meil on tugev investeerimis- ja ettevõtluskogemus.</p>
-                        <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+
                     </div>
                 </div>
                 <div class="card" style="max-width: 375px">
@@ -125,7 +126,7 @@
                             arveldusteenused, kaardimaksete vastuvõtt, faktooring, akreditiiv, privaatpangandus,
                             kaubanduse finantseerimine ja kindlustusteenus. Coop pank omab 4% Eesti hoiuste ja
                             pangalaenude turust ja 9% krediidiandjate turust.</p>
-                        <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+
                     </div>
                 </div>
             </div>
@@ -133,11 +134,13 @@
     </section>
     <!-- Võimalused -->
     <section class="s-color fade-in-section p-5" id="features">
+        <div class="stripe">
+            <div class="fill"></div>
+        </div>
         <div class="text-center p-3">
             <h1 class="text-white">Võimaluste ülevaade</h1>
         </div>
         <div class="p-3">
-
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -217,11 +220,14 @@
             </div>
         </div>
     </section>
-    <section class="fade-in-section p-5">
+    <section class="fade-in-section p-5 ">
+        <div class="stripe">
+            <div class="fill"></div>
+        </div>
         <div class="text-center p-3">
             <h1 class="text-white">Tabel</h1>
         </div>
-        <div class="table-responsive d-flex justify-content-center align-items-center">
+        <div class="table-responsive ">
 
             <table class="table-dark m-3 text-center table-bordered fade-in" id="table">
                 <thead>
@@ -240,7 +246,6 @@
                         <td>Limited international options, higher fees</td>
                         <td>Extensive Baltic and international options, low fees</td>
                         <td>Limited or none</td>
-
                     </tr>
                     <tr>
                         <th scope="row">Pension</th>
@@ -259,20 +264,11 @@
 
                     </tr>
                     <tr>
-                        <th scope="row">Kasutaja sõbralikkus</th>
-                        <td>Võimalused</td>
-                        <td>Swedbank</td>
-                        <td>SEB</td>
-                        <td>LHV</td>
-
-                    </tr>
-                    <tr>
                         <th scope="row">Krüpto</th>
                         <td>Not available</td>
                         <td>Not available</td>
                         <td>Available (limited crypto exposure options)</td>
                         <td>Not available</td>
-
                     </tr>
                     <tr>
                         <th scope="row">Tasud</th>
@@ -280,7 +276,6 @@
                         <td>Moderate to high, depending on transaction type</td>
                         <td>Low trading fees, but inactivity fees for some accounts</td>
                         <td>Generally low, but limited features</td>
-
                     </tr>
                     <tr>
                         <th scope="row">Mille poolest erineb</th>
@@ -300,10 +295,13 @@
                     </tr>
                 </tbody>
             </table>
-
         </div>
     </section>
+
     <section class="s-color fade-in-section p-5">
+        <div class="stripe">
+            <div class="fill"></div>
+        </div>
         <div class="d-flex justify-content-around ">
             <div class="message col-1 text-white">
                 <h3>Sõnum</h3>
@@ -312,9 +310,9 @@
                     id magnam accusantium?</p>
             </div>
             <div class="contact col-2 text-white " id="contact">
-                <h3>Kontaktid</h3>
+                <h3>Siit leiad täpsemat infot iga institutsiooni kohta</h3>
                 <div class="row">
-                    <a>Swed</a>
+                    <a href="https://www.swedbank.ee/private/investor/newsanalysis/startInvesting">Swed</a>
                     <a>SEB</a>
                     <a>LHV</a>
                     <a>COOP</a>
@@ -322,10 +320,8 @@
             </div>
         </div>
     </section>
-   
+
     <footer class="text-white p-3 d-flex">Copyright 2024</footer>
-
-
 </body>
 
 </html>
