beta 1.2 remade main Headline

--- a/index.html
+++ b/index.html
@@ -55,25 +55,29 @@
         </div>
     </nav>
     <!-- Lehekülje kirjeldus -->
-    <section class="main-bg  fade-in-section" id="home">
-        <div class="container-fluid">
-            <div class="overlay-text">
-                <h1 class="main-title">InvEST<br> Estonia</h1>
-                <p class="secondary-text">Pave your road to freedom!</p>
+    <section class="main-bg  fade-in-section pb-lg-5" id="home">
+        <div class="container-fluid overlay-text">
+            <div class="fade-container">
+                <h1 class="fade-from-up fade-invest main-title text-white">Inv<span
+                        class="fade-from-right fade-span text-white">EST</span>
+                </h1>
+                <h2 class="fade-from-right fade-estonia main-title text-white">Estonia</h2>
+                <p class="fade-from-down fade-lower-text secondary-text text-white">Discover investment opportunities
+                    with ease.</p>
             </div>
         </div>
     </section>
     <!-- Pangad ja institutsioonid -->
-    <section class="fade-in-section p-5" id="bank">
+    <section class="fade-in-section p-lg-5" id="bank">
         <div class="stripe">
             <div class="fill"></div>
         </div>
         <div class="text-center p-3">
-            <h1 class="text-center p-color text-white">Natukene ajalugu</h1>
+            <h1 class="text-center p-color text-white">Natukene tagatausta</h1>
         </div>
         <div>
             <div class="row d-flex justify-content-evenly mx-auto">
-                <div class="card" style="max-width: 375px">
+                <div class="card mb-5" style="max-width: 375px">
                     <div class="border border-black card-logo">
                         <img class="card-img-top" src="./img/Swed-Logo.jpg" alt="Card image">
                     </div>
@@ -88,7 +92,7 @@
 
                     </div>
                 </div>
-                <div class="card" style="max-width: 375px">
+                <div class="card mb-5" style="max-width: 375px">
                     <div class="border border-black card-logo">
                         <img class="card-img-top" src="./img/seb-logo(edited).png" alt="Card image">
                     </div>
@@ -102,20 +106,20 @@
 
                     </div>
                 </div>
-                <div class="card" style="max-width: 375px">
+                <div class="card mb-5" style="max-width: 375px">
                     <div class="border border-black card-logo">
                         <img class="card-img-top" src="./img/LHV-logo(edited).png" alt="Card image">
                     </div>
                     <div class="card-body">
-                        <p class="card-text">LHV asutasid 1999. aastal Rain Lõhmus ja Andres Viisemann. Meil töötab
-                            rohkem kui 940 inimest. Meie esindused asuvad Tallinnas, Tartus ja Pärnus. Meie
-                            pangateenuseid kasutab üle 400 000 kliendi, LHV hallatavatel pensionifondidel on 129 000
-                            aktiivset klienti ja LHV Kindlustusega on kaitstud 160 000 klienti. Oleme uuendusmeelsed
-                            ning meil on tugev investeerimis- ja ettevõtluskogemus.</p>
+                        <p class="card-text">LHV asutasid 1999. aastal Rain Lõhmus ja Andres Viisemann. Pangas töötab
+                            rohkem kui 940 inimest. Esindused asuvad nii Tallinnas, Tartus kui ka Pärnus. Teenuseid
+                            kasutab kokku juba üle 400 000 kliendi. Hallatavatel pensionifondidel on 129 000
+                            aktiivset ning LHV Kindlustusega on kaitstud 160 000 klienti. Pank on väga uuendusmeelne
+                            ning põhitugevuseks on suur investeerimis- ja ettevõtluskogemus.</p>
 
                     </div>
                 </div>
-                <div class="card" style="max-width: 375px">
+                <div class="card mb-5" style="max-width: 375px">
                     <div class="border border-black card-logo">
                         <img class="card-img-top" src="./img/coop-pank-color-1.jpg" alt="Card image">
                     </div>
@@ -133,7 +137,7 @@
         </div>
     </section>
     <!-- Võimalused -->
-    <section class="s-color fade-in-section p-5" id="features">
+    <section class="s-color fade-in-section p-lg-5" id="features">
         <div class="stripe">
             <div class="fill"></div>
         </div>
@@ -142,7 +146,7 @@
         </div>
         <div class="p-3">
             <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
+                <div class="accordion-item mb-3">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
@@ -151,17 +155,30 @@
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Options: Offers various investment funds, pension funds, bonds, and a trading platform for
-                            stocks and ETFs.
-                            Pros: User-friendly online platform, good range of investment funds, and personalized
-                            financial advice available.
-                            Cons: Relatively high fees for smaller investments; trading fees on stocks and ETFs can add
-                            up.
+                        <div class="accordion-body ">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div class="p-5 inclusive-sans-regular">
+                                    <strong>Võimalused:</strong> Offers various investment funds, pension funds, bonds,
+                                    and
+                                    a trading platform for
+                                    stocks and ETFs.<br>
+                                    <strong>Eelised</strong>User-friendly online platform, good range of investment
+                                    funds,
+                                    and personalized
+                                    financial advice available.<br>
+                                    <strong>Puudused</strong>Relatively high fees for smaller investments; trading fees
+                                    on
+                                    stocks and ETFs can add
+                                    up.
+
+                                </div>
+                                <img src="./img/swed-s.jpg" alt="" class="accordion-image">
+                            </div>
                         </div>
+
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item mb-3">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
@@ -170,16 +187,26 @@
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            Options: Provides mutual funds, pension funds, bonds, and a platform for trading stocks and
-                            ETFs.
-                            Pros: Extensive options for low-to-medium risk investments, solid educational resources, and
-                            a simple platform.
-                            Cons: Limited international trading options, higher fees for active trading.
+                        <div class="accordion-body ">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div class="p-5 inclusive-sans-regular">
+                                    <strong>Võimalused</strong>
+                                    Options: Provides mutual funds, pension funds, bonds, and a platform for trading
+                                    stocks and
+                                    ETFs.<br>
+                                    <strong>Eelised</strong>
+                                    Pros: Extensive options for low-to-medium risk investments, solid educational
+                                    resources, and
+                                    a simple platform.<br>
+                                    <strong>Puudused</strong>
+                                    Cons: Limited international trading options, higher fees for active trading.
+                                </div>
+                                <img src="./img/swed-s.jpg" alt="" class="accordion-image">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item mb-3">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
@@ -189,16 +216,27 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Options: Known for wide-ranging investment opportunities, including stocks, bonds, funds,
-                            and unique products like crypto exposure.
-                            Pros: Popular among active investors, competitive fees, a large selection of foreign stocks,
-                            and solid support for tech-savvy users.
-                            Cons: Platform may feel complex for beginners, and there are fees on some account types for
-                            inactive users.
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div class="p-5 inclusive-sans-regular">
+                                    <strong>Võimalused</strong>
+                                    Options: Known for wide-ranging investment opportunities, including stocks, bonds,
+                                    funds,
+                                    and unique products like crypto exposure.<br>
+                                    <strong>Eelised</strong>
+                                    Pros: Popular among active investors, competitive fees, a large selection of foreign
+                                    stocks,
+                                    and solid support for tech-savvy users.<br>
+                                    <strong>Puudused</strong>
+                                    Cons: Platform may feel complex for beginners, and there are fees on some account
+                                    types for
+                                    inactive users.
+                                </div>
+                                <img src="./img/swed-s.jpg" alt="" class="accordion-image">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item mb-3">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed d-block text-center p-color text-white" type="button"
                             data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
@@ -208,12 +246,23 @@
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            Options: Primarily offers funds and pension plans, along with some investment account
-                            services.
-                            Pros: Good choice for beginners, offers simpler, low-risk funds, and focuses on stable
-                            returns.
-                            Cons: Limited variety of investment products compared to other banks, and a less advanced
-                            trading platform.
+                            <div class="d-flex justify-content-center align-items-center">
+                                <div class="p-5 inclusive-sans-regular">
+                                    <strong>Võimalused</strong>
+                                    Options: Primarily offers funds and pension plans, along with some investment
+                                    account
+                                    services.<br>
+                                    <strong>Eelised</strong>
+                                    Pros: Good choice for beginners, offers simpler, low-risk funds, and focuses on
+                                    stable
+                                    returns.<br>
+                                    <strong>Puudused</strong>
+                                    Cons: Limited variety of investment products compared to other banks, and a less
+                                    advanced
+                                    trading platform.
+                                </div>
+                                <img src="./img/swed-s.jpg" alt="" class="accordion-image">
+                            </div>
                         </div>
                     </div>
                 </div>
